added last slide

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Cordova Plugins</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/sgs.css">
@@ -36,6 +36,7 @@
 				<section data-markdown="slides/ios2.md"></section>
 				<section data-markdown="slides/generate.md"></section>
 				<section data-markdown="slides/implement.md"></section>
+				<section data-markdown="slides/end.md"></section>
 			</div>
 		</div>
 
